--- a/Menu_Side_Reveal/index.html
+++ b/Menu_Side_Reveal/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-<script src="/styles.css"></script>
+<script src="http://paeberle.com/WWF-Dev/Menu_Side_Reveal/styles.css"></script>
 </head>
 <body>
 	<div id="test"></div>
 </body>
+</html>
