--- a/On_Click_Explode/index.html
+++ b/On_Click_Explode/index.html
@@ -9,7 +9,8 @@
   src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
-  <script src="scripts.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg-min.js"></script>
+<script src="scripts.js"></script>
 </head>
 <body>
 	<div id="side_menu_wrapper">
@@ -34,9 +35,7 @@
 
 					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 						 viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve" class="menu_item icon social">
-					<style type="text/css">
-						.st0{fill:none;}
-					</style>
+					 
 					<path class="st0" d="M95.93,22.71c0-3.17,0.01-6.34,0-9.51c-0.02-5-4.13-9.12-9.13-9.13c-24.52-0.01-49.03-0.01-73.55,0
 						c-4.29,0-8.02,3.02-8.99,7.21c-0.05,0.23-0.13,0.45-0.2,0.68v76.07c0.42,1.65,1,3.23,2.14,4.55c1.43,1.66,3.18,2.76,5.34,3.18
 						c0.14,0.03,0.28,0.1,0.41,0.16h76.09c1.62-0.42,3.19-0.97,4.49-2.09c2.24-1.92,3.41-4.31,3.4-7.28
@@ -52,9 +51,7 @@
 
 					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 						 viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve" class="menu_item icon social">
-					<style type="text/css">
-						.st0{fill:none;}
-					</style>
+					 
 					<path class="st0" d="M95.96,40.84c-0.02-5.47,0.07-10.95-1.02-16.35c-1.41-6.99-5.01-12.52-11.15-16.26
 						c-4.55-2.78-9.64-3.76-14.89-3.92c-6.28-0.19-12.56-0.24-18.83-0.35c0,0.04,0,0.08,0,0.12c-4.33,0-8.67-0.07-13,0.02
 						C32.54,4.19,28,4.19,23.57,5.29C14.78,7.46,8.81,12.75,5.88,21.35c-1.56,4.58-1.73,9.36-1.78,14.11c-0.11,9.21-0.1,18.41-0.03,27.61
@@ -87,7 +84,7 @@
 		</div>
 	</div>
 <header>
-		<svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 			 viewBox="0 0 523.8 41.92" style="enable-background:new 0 0 523.8 41.92;" xml:space="preserve">
 		<g>
 	<path class="st1" d="M481.66,19.61l-6.23-0.05V7.25h6.37c2.33,0,3.98,0.2,5.02,0.62c1.08,0.43,1.96,1.16,2.62,2.15
@@ -119,19 +116,29 @@
 			L116.18,36.6z M40.76,5.32l-7.14,24.77L23.97,5.55L14.2,30.09L7.18,5.32H5.15l8.75,30.85L24,10.9l9.91,25.26l8.86-30.84H40.76z
 			 M76.84,5.32V36.6h14.51v-1.88H78.84V5.32H76.84z M97.77,5.32V36.6h14.51v-1.88H99.76V5.32H97.77z"/>
 </svg>
-
 		<div id="menu">
-	
+			<a id="slides" class="menu_item">
+				<svg version="1.1" id="slide_reveal" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					 viewBox="0 0 150 80.17" style="enable-background:new 0 0 150 80.17;" xml:space="preserve" class="menu_item icon" >
+				<style type="text/css">
+					.st1{fill:#FFFFFF;}
+				</style>
+				<rect x="51.06" y="8.24" class="st1" width="95.59" height="62.96"/>
+				<rect x="41.99" y="6.71" class="st1" width="95.59" height="66.75"/>
+				<rect x="29.43" y="5.18" class="st1" width="95.59" height="69.81"/>
+				<rect x="3.75" y="4.05" class="st1" width="103.22" height="72.08"/>
+				</svg>
+			</a>
 			<a id="hamburger" class="menu_item last">
-				<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+				<svg version="1.1" id="ham_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 					viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve" class="menu_item icon">
 				<style type="text/css">
 				.st0{fill:none;}
 				</style>
 				<g>
-				<line class="st0" x1="17.27" y1="32.18" x2="80.89" y2="32.18"/>
-				<line class="st0" x1="3.06" y1="50.5" x2="95.94" y2="50.5"/>
-				<line class="st0" x1="17.69" y1="68.82" x2="81.31" y2="68.82"/>
+				<line class="bar" x1="17.27" y1="32.18" x2="80.89" y2="32.18"/>
+				<line class="bar" x1="3.06" y1="50.5" x2="95.94" y2="50.5"/>
+				<line class="bar" x1="17.69" y1="68.82" x2="81.31" y2="68.82"/>
 				</g>
 				</svg>
 			</a>
@@ -151,7 +158,7 @@
 			<div class="corner" id="corner_4">
 				<img src="corner.svg">
 			</div>
-			<div style="background-image:url('5146.1_5MDancing_Pumpkin_ProcessPhotos_044 (1).jpg'); background-size:100%; background-position: center center; background-repeat: no-repeat;" id="slide_container">
+			<div style="background-image:url('5146.1_5MDancing_Pumpkin_ProcessPhotos_044 (1).jpg'); background-size:cover; background-position:center; background-repeat: no-repeat;" id="slide_container">
 			</div>
 		</div>
 		<div id="info_wrapper">
@@ -165,6 +172,9 @@
 					<div class="info_header attrib title">2021</div>
 					<div class="info_header attrib title">Bronze</div>
 				</div>
+				<a>
+
+				</a>
 		</div>
 	</div>
 </body>
