--- a/On_Click_Explode/index.html
+++ b/On_Click_Explode/index.html
@@ -158,7 +158,7 @@
 			<div class="corner" id="corner_4">
 				<img src="corner.svg">
 			</div>
-			<div style="background-image:url('5146.1_5MDancing_Pumpkin_ProcessPhotos_044 (1).jpg'); background-size:cover; background-position:center; background-repeat: no-repeat;" id="slide_container">
+			<div style="background-image:url('Photos/Dancing Pumpkin/5146.1_5MDancing_Pumpkin_ProcessPhotos_044 (1).jpg'); background-size:cover; background-position:center; background-repeat: no-repeat;" id="slide_container">
 			</div>
 		</div>
 		<div id="info_wrapper">
