--- a/On_Click_Explode/index.html
+++ b/On_Click_Explode/index.html
@@ -158,19 +158,19 @@
 			<div class="corner" id="corner_4">
 				<img src="corner.svg">
 			</div>
-			<div style="background-image:url('Photos/Dancing Pumpkin/5146.1_5MDancing_Pumpkin_ProcessPhotos_044 (1).jpg'); background-size:cover; background-position:center; background-repeat: no-repeat;" id="slide_container">
+			<div id="slide_container" style="background-image:url('Photos/Dancing Pumpkin/5146.1_5MDancing_Pumpkin_ProcessPhotos_044 (1).jpg'); background-size:cover; background-position:center; background-repeat: no-repeat;">
 			</div>
 		</div>
 		<div id="info_wrapper">
-			<div class="title">Production Stage</div>
-				<div id="production">
+			<div id="prod_heading" class="title">Production Stage</div>
+				<div id="prod_description">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pharetra eleifend faucibus. Quisque nisi tortor, lobortis sit amet rutrum ac, scelerisque sed dolor. Vivamus quis ornare quam.Accumsan dignissim bibendum, leo enim hendrerit lectus, a gravida metus est non sem.</p>
 				</div>
 				<div id="attribution">
-					<div class="info_header attrib title">Yayoi Kusama</div>
-					<div class="italic info_header attrib title">Dancing Pumpkin</div>
-					<div class="info_header attrib title">2021</div>
-					<div class="info_header attrib title">Bronze</div>
+					<div id="artist" class="info_header attrib title">Yayoi Kusama</div>
+					<div id="work" class="italic info_header attrib title">Dancing Pumpkin</div>
+					<div id="year" class="info_header attrib title">2021</div>
+					<div id="material" class="info_header attrib title">Bronze</div>
 				</div>
 				<a>
 
