--- a/On_Click_Explode/index.html
+++ b/On_Click_Explode/index.html
@@ -199,5 +199,11 @@
 					<div id="material" class="info_header attrib title">Bronze</div>
 				</div>
 	</div>
+	<div id="full_attribution" class="fullscreen">
+		<div id="full_artist" class="full info_header attrib title">Yayoi Kusama</div>
+		<div id="full_work" class="full italic info_header attrib title">Dancing Pumpkin</div>
+		<div id="full_year" class=" full info_header attrib title">2021</div>
+		<div id="full_material" class="full info_header attrib title">Bronze</div>
+	</div>
 </body>
 </html>
