--- a/On_Click_Explode/index.html
+++ b/On_Click_Explode/index.html
@@ -27,7 +27,7 @@
 							</a>
 						</li>
 						<li class="slide_menu_item">
-							<a>
+							<a href="contact.html">
 								Contact
 							</a>
 						</li>
@@ -189,21 +189,22 @@
 		</div>
 		<div id="info_wrapper">
 				<div id="prod_description">
-					<p id="prod_heading" class="title">Production Stage</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi pharetra eleifend faucibus. Quisque nisi tortor, lobortis sit amet rutrum ac, scelerisque sed dolor. Vivamus quis ornare quam.Accumsan dignissim bibendum, leo enim hendrerit lectus, a gravida metus est non sem.</p>
+					<p id="prod_heading" class="title"></p>
+					<p></p>
 				</div>
 				<div id="attribution">
-					<div id="artist" class="info_header attrib title">Yayoi Kusama</div>
-					<div id="work" class="italic info_header attrib title">Dancing Pumpkin</div>
-					<div id="year" class="info_header attrib title">2021</div>
-					<div id="material" class="info_header attrib title">Bronze</div>
+					<div id="artist" class="info_header attrib title"></div>
+					<div id="work" class="italic info_header attrib title"></div>
+					<div id="year" class="info_header attrib title"></div>
+					<div id="material" class="info_header attrib title"></div>
 				</div>
 	</div>
 	<div id="full_attribution" class="fullscreen">
-		<div id="full_artist" class="full info_header attrib title">Yayoi Kusama</div>
-		<div id="full_work" class="full italic info_header attrib title">Dancing Pumpkin</div>
-		<div id="full_year" class=" full info_header attrib title">2021</div>
-		<div id="full_material" class="full info_header attrib title">Bronze</div>
+		<div id="full_artist" class="full info_header attrib title"></div>
+		<div id="full_work" class="full italic info_header attrib title"></div>
+		<div id="full_year" class=" full info_header attrib title"></div>
+		<div id="full_material" class="full info_header attrib title"></div>
 	</div>
+</div>
 </body>
 </html>
